--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <a href="index.html" class="text-lg font-bold text-black text-center sm:text-left">GRAPHICS NEPAL PVT. LTD.</a>
       </div>
 
-      <!-- Mobile Menu Button 
+      
       <div class="sm:hidden">
         <button onclick="document.getElementById('nav-menu').classList.toggle('hidden')" class="text-black focus:outline-none">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
           </svg>
         </button>
-      </div>-->
+      </div>
 
       <!-- Nav Menu -->
       <nav id="nav-menu" class="hidden sm:flex flex-col sm:flex-row gap-2 sm:gap-4 text-sm sm:text-base">
@@ -107,7 +107,11 @@
 
 <section aria-labelledby="products" class="bg-yellow-300 py-10">
   <div class="products bg-yellow-300 max-w-screen-xl mx-auto px-4">
-  <h1 class="text-5xl font-bold text-center mb-8 text-black mt-10">OUR PRODUCTS</h1>
+  <h1 class="text-5xl font-black text-center mb-8 text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-green-500" 
+     style="-webkit-text-stroke: 1px black;">
+  OUR PRODUCTS
+</h1>
+
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
