--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <a href="index.html" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="font-bold group-hover:text-white">Home</span>
         </a>
-        <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
+        <a href="AboutUs.html" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="font-bold group-hover:text-white">About Us</span>
         </a>
-        <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
+        <a href="Contact.html" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="font-bold group-hover:text-white">Contact</span>
         </a>
       </nav>
