--- a/AboutUs.html
+++ b/AboutUs.html
@@ -70,7 +70,7 @@
         <a href="index.html" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="font-bold group-hover:text-white">Home</span>
         </a>
-        <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
+        <a href="AboutUs.html" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="font-bold group-hover:text-white">About Us</span>
         </a>
         <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
