--- a/Contact.html
+++ b/Contact.html
@@ -80,7 +80,13 @@
     </div>
   </header>
 
-
+<section>
+    <main>
+        <div>
+        <h1>Contact Us</h1>
+        </div>
+    </main>
+</section>
 
 
 
