--- a/Contact.html
+++ b/Contact.html
@@ -82,7 +82,7 @@
 
 <section>
     <main>
-        <div>
+        <div id="Contact" class="container none text-5xl">
         <h1>Contact Us</h1>
         </div>
     </main>
