--- a/Contact.html
+++ b/Contact.html
@@ -80,12 +80,10 @@
     </div>
   </header>
 
-<section>
-    <main>
+<section class="bg-white dark:bg-gray-900">
         <div id="Contact" class="container none text-5xl">
         <h1>Contact Us</h1>
         </div>
-    </main>
 </section>
 
 
