--- a/Contact.html
+++ b/Contact.html
@@ -81,9 +81,9 @@
   </header>
 
 <section class="bg-white dark:bg-gray-900">
-        <div id="Contact" class="container none text-5xl">
-        <h1>Contact Us</h1>
-        </div>
+    <div class="py-4 lg:py-16 px-4 mx-auto max-w-screen-md">
+        <h1 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h1>
+    </div>
 </section>
 
 
