--- a/Contact.html
+++ b/Contact.html
@@ -80,9 +80,9 @@
     </div>
   </header>
 
-<section class="bg-white dark:bg-gray-900">
+<section class="bg-white">
     <div class="py-4 lg:py-16 px-4 mx-auto max-w-screen-md">
-        <h1 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h1>
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-black">Contact Us</h2>
     </div>
 </section>
 
