--- a/Contact.html
+++ b/Contact.html
@@ -83,7 +83,7 @@
 <section class="bg-white">
     <div class="py-4 lg:py-16 px-4 mx-auto max-w-screen-md">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-black">Contact Us</h2>
-        <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">We're here to assist you! If you have any questions or need assistance, please feel free to reach out to us.</p>
+        <p class="mb-8 lg:mb-16 font-light text-center text-blue-400 dark:text-gray-400 sm:text-xl">We're here to assist you! If you have any questions or need assistance, please feel free to reach out to us.</p>
     </div>
 </section>
 
