--- a/Contact.html
+++ b/Contact.html
@@ -80,7 +80,7 @@
     </div>
   </header>
 
-<section class="bg-white">
+<section class="bg-white pt-5 pb-5">
     <div class="p-4 mx-auto max-w-xl bg-white">
         <h2 class="text-5xl text-slate-900 font-bold text-center mb-3 mt-3">Contact us</h2>
         <p class="mb-6 lg:mb-10 font-light text-center text-black sm:text-xl">We're here to assist you! If you have any questions or need assistance, please feel free to reach out to us.</p>
