--- a/Contact.html
+++ b/Contact.html
@@ -82,7 +82,7 @@
 
 <section class="bg-white pt-5 pb-5">
     <div class="p-4 mx-auto max-w-xl bg-white">
-        <h2 class="text-5xl text-slate-900 font-bold text-center mb-3 mt-3">Contact us</h2>
+        <h2 class="text-5xl text-slate-900 font-bold text-center mb-3 mt-3">Contact Us</h2>
         <p class="mb-6 lg:mb-10 font-light text-center text-black sm:text-xl">We're here to assist you! If you have any questions or need assistance, please feel free to reach out to us.</p>
       <form action="#" class="space-y-8">
           <div>
