--- a/Contact.html
+++ b/Contact.html
@@ -80,8 +80,8 @@
     </div>
   </header>
 
-<section class="bg-white pt-5 pb-5">
-    <div class="p-8 mx-auto max-w-2xl bg-white rounded-lg shadow-lg">
+<section class="bg-white pt-5 pb-10">
+    <div class="p-8 mx-auto max-w-2xl bg-white rounded-lg shadow-xl">
         <h2 class="text-5xl text-slate-900 font-bold text-center mb-3 mt-3">Contact Us</h2>
         <p class="mb-6 lg:mb-10 font-light text-center text-black sm:text-xl">We're here to assist you! If you have any questions or need assistance, please feel free to reach out to us.</p>
       <form action="#" class="space-y-8">
