updated code in about us

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -83,15 +83,15 @@
 
 <section class="bg-gray-100">
     <div class="container mx-auto py-16 px-4 sm:px-6 lg:px-8">
-        <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-8  ">
             <div class="max-w-lg">
                 <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">About Us</h2>
-                <p class="mt-4 text-gray-600 text-lg">With over 30 years of experience, Graphics Nepal has been a trusted provider of high-quality printing and branding solutions. From custom stamps and flex prints to ID cards and promotional materials, we are dedicated to helping businesses and individuals bring their ideas to life.
-                <br><br>Our commitment to quality, fast service, and customer satisfaction has made us a go-to destination for reliable and creative print solutions across Nepal.</p>
+                <p class="mt-4 text-gray-600 text-lg">For over 30 years, Graphics Nepal has proudly served as a small print and branding shop based in Tripureshwor, Kathmandu. We offer a wide range of services — from custom stamps and flex prints to ID cards and promotional materials — helping individuals and businesses bring their ideas to life.<br><br>
+                Our commitment to quality work, quick service, and personal attention has earned us the trust of customers all across Nepal.</p>
             </div>
-            
+
             <div class="mt-12 md:mt-0">
-                <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="About Us Image" class="object-cover rounded-lg shadow-md">
+                <img src="./images/1744249020288.jpg" alt="Shop Image" class="object-cover rounded-lg shadow-md">
             </div>
         </div>
     </div>
