--- a/AboutUs.html
+++ b/AboutUs.html
@@ -93,6 +93,10 @@
             <div class="mt-12 md:mt-0">
                 <img src="./images/1744249020288.jpg" alt="Shop Image" class="object-cover rounded-lg shadow-md">
             </div>
+
+            <div class="container">
+              <h3>Our Location</h3>
+            </div>
         </div>
     </div>
 </section>
