--- a/AboutUs.html
+++ b/AboutUs.html
@@ -94,7 +94,7 @@
                 <img src="./images/1744249020288.jpg" alt="Shop Image" class="object-cover rounded-lg shadow-md">
             </div>
 
-            <div class="container">
+            <div class="container2">
               <h3>Our Location</h3>
             </div>
         </div>
