updated about us

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -93,15 +93,14 @@
             <div class="mt-12 md:mt-0">
                 <img src="./images/1744249020288.jpg" alt="Shop Image" class="object-cover rounded-lg shadow-md">
             </div>
-
-            <div class="container2">
-              <h3>Our Location</h3>
-            </div>
         </div>
     </div>
 </section>
 
-
+<div class="container2 mx-auto py-16 px-4 sm:px-6 lg:px-8">
+  <h3 class="text-xl font-bold text-gray-900 sm:text-2xl">Our Location</h3>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.1045417200908!2d85.31365491206998!3d27.693269537874702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19a0b29dd365%3A0xa4afcebbe66f8d41!2sGraphics%20Nepal!5e0!3m2!1sen!2snp!4v1753450957727!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 
 
