--- a/AboutUs.html
+++ b/AboutUs.html
@@ -145,8 +145,8 @@
     <div>
       <h3 class="text-lg font-semibold mb-3">Follow Us</h3>
       <div class="flex gap-4 text-xl">
-        <a href="#" aria-label="Facebook" class="hover:text-blue-500"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" aria-label="Facebook" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+        <a href="" aria-label="Facebook" class="hover:text-blue-500"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/graphics_nepal58?igsh=YmZsbDJjdnlkeGUw&utm_source=qr" target="_blank" rel="noopener noreferrer"     aria-label="Instagram" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
         <a href="#" aria-label="Facebook" class="hover:text-red-600"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
