--- a/AboutUs.html
+++ b/AboutUs.html
@@ -147,7 +147,7 @@
       <div class="flex gap-4 text-xl">
         <a href="#" aria-label="Facebook" class="hover:text-blue-500"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/graphics_nepal58?igsh=YmZsbDJjdnlkeGUw&utm_source=qr" target="_blank" rel="noopener noreferrer"     aria-label="Instagram" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="Tiktok" class="hover:text-red-600"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@graphics.nepal4k?_t=ZS-8zPceeNdKMr&_r=1" target="_blank" rel="noopener noreferrer" aria-label="Tiktok" class="hover:text-red-600"><i class="fab fa-tiktok"></i></a>
       </div>
     </div>
   </div>
